--- a/src/PizzaApi/PizzaApi.csproj
+++ b/src/PizzaApi/PizzaApi.csproj
@@ -26,4 +26,7 @@
             <PrivateAssets>All</PrivateAssets>
         </PackageReference>
     </ItemGroup>
+    <ItemGroup>
+      <Folder Include="Migrations" />
+    </ItemGroup>
 </Project>
