--- a/src/PizzaApi/PizzaApi.csproj
+++ b/src/PizzaApi/PizzaApi.csproj
@@ -20,6 +20,7 @@
         </PackageReference>
         <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.7" />
+        <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
         <PackageReference Include="StackExchange.Redis" Version="2.2.4" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
         <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
