--- a/src/PizzaApi/PizzaApi.csproj
+++ b/src/PizzaApi/PizzaApi.csproj
@@ -25,6 +25,7 @@
         <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.7" />
         <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
+        <PackageReference Include="Slugify.Core" Version="3.0.0" />
         <PackageReference Include="StackExchange.Redis" Version="2.2.4" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
         <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
@@ -33,5 +34,7 @@
     </ItemGroup>
     <ItemGroup>
       <Folder Include="Migrations" />
+      <Folder Include="Models\Delete" />
+      <Folder Include="Models\Update" />
     </ItemGroup>
 </Project>
